6 SDL基础-图片音乐文字完成

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ set(TARGET ${PROJECT_NAME}-${CMAKE_SYSTEM_NAME})
 
 # 查找并载入Cmake预设
 find_package(SDL2 REQUIRED)
+find_package(SDL2_image REQUIRED)
+find_package(SDL2_mixer REQUIRED)
+find_package(SDL2_ttf REQUIRED)
 
 # 添加可执行文件
 add_executable(${TARGET} main.cpp)
@@ -28,4 +31,7 @@ add_executable(${TARGET} main.cpp)
 # 链接库
 target_link_libraries(${TARGET}
                         ${SDL2_LIBRARIES}
+                        SDL2_image::SDL2_image
+                        SDL2_mixer::SDL2_mixer
+                        SDL2_ttf::SDL2_ttf
                         )
