--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ find_package(SDL2_ttf REQUIRED)
 add_executable(${TARGET} 
                 "src/main.cpp"
                 "src/Game.cpp"
+                "src/Scene.cpp"
+                "src/SceneTitle.cpp"
                 "src/SceneMain.cpp")
 
 # 链接库
