--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,12 @@ else()
     add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+# 复制assets文件夹到编译目录
+file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
+
 # 设置编译输出目录
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})
 
 set(TARGET ${PROJECT_NAME}-${CMAKE_SYSTEM_NAME})
 
